- Collected DCI data recalculation based on stored raw values and current transformation settings
- Fixed issues:
	NX-183 (Implemented responsible users for objects)
	NX-900 (Server started during nxdbmgr check forced repair)
	NX-1102 (Implement event groups)
	NX-1199 (SNMP credentials per-zone)
	NX-1219 (Add 'created' and 'last login' columns to User Manager)
	NX-1271 (Implemented internal server topology)
	NX-1386 (Implemented units for Server Variables)

*
* 2.2.11
*

- Fixed issues:
	NX-1512 (File Manager: Unable to create new directory in root directory on Windows)
	NX-1513 (Server installation fails with MySQL 8.0)
	NX-1518 (Variable $object is not set for scheduled scripts associated with object other than node)
	NX-1519 ("Import dashboard" action not available in dashboard group context menu)


*
* 2.2.10
*

- Improved server startup time
- Added server startup event SYS_SERVER_STARTED
- New method readInternalParameter in NXSL classes Node, Cluster, MobileDevice
- Improved cached agent data reconciliation
- Fixed DCI instance discovery issues
- Fixed apkg installer script on AIX
- Fixed issues:
	NX-1477 (Offline data collection does not cleanup old data if there are no connection with the server)
	NX-1514 (Predefined graph tree displayed incorrectly)


*
* 2.2.9
*

- New NXSL functions: Base64Decode, Base64Encode, EventCodeFromName, EventNameFromCode
- Original event name passed to alarm timeout event as 5th parameter
- Added information tooltips in switch port view
- Improved performance of active network discovery
- Minimum, maximum, and moving average for ICMP response time in ping subagent
- Fixed issues:
	NX-1463 (Web UI does not work under Tomcat 9)
	NX-1475 (Deselected "Create helpdesk ticket on alarm creation" is not being saved in EPP)
	NX-1486 (NXSL function CreateDCI should allow creation with default retention and poll intervals)
	NX-1489 (Unreliable MariaDB Connector/C version detection in workaround for MariaDB bug CONC-281)