@@ -51,6 +51,7 @@ INSERT INTO config (var_name,var_value,default_value,is_visible,need_server_rest
 INSERT INTO config (var_name,var_value,default_value,is_visible,need_server_restart,data_type,description,units) VALUES ('DBWriter.MaxRecordsPerTransaction','1000','1000',1,1,'I','Maximum number of records per one transaction for delayed database writes','records/transaction');
 INSERT INTO config (var_name,var_value,default_value,is_visible,need_server_restart,data_type,description,units) VALUES ('DataCollection.OnDCIDelete.TerminateRelatedAlarms','1','1',1,0,'B','Enable/disable automatic termination of related alarms when data collection item is deleted.','');
 INSERT INTO config (var_name,var_value,default_value,is_visible,need_server_restart,data_type,description,units) VALUES ('DataCollection.ScriptErrorReportInterval','86400','86400',1,0,'I','Minimal interval between reporting errors in data collection related script.','seconds');
+INSERT INTO config (var_name,var_value,default_value,is_visible,need_server_restart,data_type,description,units) VALUES ('DataCollection.StartupDelay','0','0',1,1,'B','Enable/disable randomized data collection delays on server startup for evening server load distrubution.','');
 INSERT INTO config (var_name,var_value,default_value,is_visible,need_server_restart,data_type,description,units) VALUES ('DefaultAgentCacheMode','2','2',1,1,'C','Default agent cache mode','');
 INSERT INTO config (var_name,var_value,default_value,is_visible,need_server_restart,data_type,description,units) VALUES ('DefaultAgentProtocolCompressionMode','1','1',1,0,'C','Default agent protocol compression mode','');
 INSERT INTO config (var_name,var_value,default_value,is_visible,need_server_restart,data_type,description,units) VALUES ('DefaultConsoleDateFormat','dd.MM.yyyy','dd.MM.yyyy',1,0,'S','Default date display format for GUI.','');
